[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FSSLibrary"
dynamic = ["version"]
description = "Set of python library made specifically for Floating and Submerged Structures course."
authors = [
    {name = "Shagun Agarwal", email = "shagun.1995@gmail.com"},
    {name = "Oriol Colomés", email = "j.o.colomesgene@tudelft.nl"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "scipy"
]

[project.urls]
Homepage = "https://github.com/CMOE-TUDelft/FSSLibrary"

[tool.setuptools.packages.find]

[tool.setuptools.dynamic]
version = { attr = "FSSLibrary.__version__" }